--- a/carla_client_msgs/CMakeLists.txt
+++ b/carla_client_msgs/CMakeLists.txt
@@ -12,6 +12,8 @@ find_package(geometry_msgs REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/Lanes.msg"
+  "msg/ObjBBox.msg"
+  "msg/ObjBBoxArray.msg"
   DEPENDENCIES geometry_msgs
  )
 
