--- a/lidar_localization_ros2/param/localization.yaml
+++ b/lidar_localization_ros2/param/localization.yaml
@@ -13,7 +13,7 @@
       scan_period: 0.1
       use_pcd_map: true
       map_path: "/home/marvi/map/GlobalMap.pcd"
-      set_initial_pose: true
+      set_initial_pose: false
       initial_pose_x: 0.0
       initial_pose_y: 0.0
       initial_pose_z: 0.0
